CMAKE_MINIMUM_REQUIRED (VERSION 3.4)

PROJECT (demo)

#指定头文件路径
INCLUDE_DIRECTORIES(${PROJECT_ROOT_DIR}/deps)
INCLUDE_DIRECTORIES(${PROJECT_ROOT_DIR}/include)
INCLUDE_DIRECTORIES(${PROJECT_ROOT_DIR}/include/core)
INCLUDE_DIRECTORIES(${PROJECT_ROOT_DIR}/include/tools)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/include)

#读取Src目录
AUX_SOURCE_DIRECTORY(src DIR_SRCS)

ADD_EXECUTABLE(${PROJECT_NAME} ${DIR_SRCS} )

#链接库
TARGET_LINK_LIBRARIES(${PROJECT_NAME} engine)

#输出路径
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_ROOT_DIR}/build/bin)

#拷贝资源
FILE(COPY ${PROJECT_SOURCE_DIR}/shader DESTINATION ${PROJECT_ROOT_DIR}/build/bin)
# FILE(COPY ${PROJECT_SOURCE_DIR}/source DESTINATION ${PROJECT_ROOT_DIR}/build/bin)


#设置编译选项
if(WIN32)
    SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -std=c++11 -Wall")
    SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -std=c++11 -Wall")
elseif(UNIX)
    SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -std=c++11 -O0 -Wall -g")
    SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -std=c++11 -O3 -Wall")
endif()